fix: move name higher on mobile so it's not covered by character cap

--- a/src/components/styles/Landing.css
+++ b/src/components/styles/Landing.css
@@ -168,6 +168,21 @@
   left: 0;
 }
 
+@media screen and (max-width: 499px) {
+  .landing-intro {
+    top: 2%;
+  }
+
+  .landing-intro h2 {
+    font-size: 18px;
+  }
+
+  .landing-intro h1 {
+    font-size: 26px;
+    line-height: 26px;
+  }
+}
+
 .landing-intro h2 {
   margin: 0;
   color: var(--accentColor);
